syntax = "proto3";

package user;

service UserService {
  rpc  Captcha(CaptchaRequest) returns (CaptchaResponse);
  rpc  SmsCode(SmsCodeRequest) returns (SmsCodeResponse);
  rpc  Register(RegisterUserDto) returns (RegisterReponse);
  rpc  InitData(Empty) returns (Empty);
  rpc  Login(LoginRequest) returns (LoginResponse);
  rpc  AdminLogin(LoginRequest) returns (LoginResponse);
  rpc  Refresh(RefreshRequest) returns (RefreshResponse);
  rpc  Info(InfoRequest) returns (UserInfo);
  rpc  ResetPassword(ResetPasswordRequest) returns (Empty);
  rpc  ValidateSmsCode(ValidateSmsCodeRequest) returns (Empty);
}

message Empty {}

message CaptchaRequest {
  string address = 1;
}
message CaptchaResponse {
  string countDown = 1;
}

message SmsCodeRequest {
  string phone = 1;
}

message SmsCodeResponse {
  string countDown = 1;
}

message RegisterUserDto {
 string username = 1;
 string password = 2;
 string phone = 3;
 string captcha = 4;
}

message RegisterReponse {
 string message = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message UserInfo {
  int32 id = 1;
  string username = 2;
  string password = 3;
  string nickName = 4;
  string avatar = 5;
  string email = 6;
  string contactIdToB = 7;
  string contactIdToC = 8;
  string contactPassword = 9;
  bool isFrozen = 10;
  bool isAdmin = 11;
  string createTime = 12;
  string updateTime = 13;
}

message LoginResponse {
  string accessToken = 2;
  string refreshToken = 3;
}

message RefreshRequest {
  string refreshToken = 1;
}

message RefreshResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message InfoRequest {
  int32 userId = 1;
}

message ValidateSmsCodeRequest {
  string phone = 1;
  string code = 2;
}

message ResetPasswordRequest {
  string username = 1;
  string password = 2;
}

